# tessellator

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-and-test.yml
src/: CMakeLists.txt
src/cgal/: ConvexHull.cpp  ConvexHull.h  Delaunator.cpp  Delaunator.h  HPolygonSet.cpp  HPolygonSet.h  LSFPlane.h  Manifolder.cpp  Manifolder.h  PolyhedronTools.cpp  PolyhedronTools.h  Repairer.cpp  Repairer.h  Tools.cpp  Tools.h  Types.h
src/tessellator/: Collapser.cpp  Collapser.h  Driver.cpp  Driver.h  DriverOptions.h  Slicer.cpp  Slicer.h  Smoother.cpp  Smoother.h  SmootherTools.cpp  SmootherTools.h  Snapper.cpp  Snapper.h  SnapperOptions.h
src/tessellator/filler/: Filler.cpp  Filler.h  FillerTools.cpp  FillerTools.h  SegmentsArray.cpp  SegmentsArray.h  Slice.cpp  Slice.h
src/types/: CellIndex.h  Map.h  Mesh.h  Mesher.h  Vector.h  VolumeMaps.h
src/utils/: Cleaner.cpp  Cleaner.h  CoordGraph.cpp  CoordGraph.h  ElemGraph.cpp  ElemGraph.h  Geometry.cpp  Geometry.h  GridTools.cpp  GridTools.h  MeshTools.cpp  MeshTools.h  Tools.cpp  Tools.h  Types.h
test/: CMakeLists.txt  MeshFixtures.h
test/CJ_tests/: IntersectionTest.cpp
test/cgal/: ArrangmentTest.cpp  ConvexHullTest.cpp  DelaunatorTest.cpp  HPolygonSetTest.cpp  LSFPlaneTest.cpp  ManifolderTest.cpp  PolyhedronToolsTest.cpp  RepairerTest.cpp
test/tessellator/: CollapserTest.cpp  DriverTest.cpp  SlicerTest.cpp  SmootherTest.cpp  SmootherToolsTest.cpp  SnapperTest.cpp
test/tessellator/filler/: FillerTest.cpp  FillerToolsTest.cpp
test/types/: MeshTest.cpp  MeshTest.h
test/utils/: CleanerTest.cpp  CoordGraphTest.cpp  ElemGraphTest.cpp  GeometryTest.cpp  GridToolsTest.cpp  MeshToolsTest.cpp
testData/: microstrip_track_out.stl  open_sphere_2_out.stl  open_sphere_half_out.stl  open_sphere_out.stl  sphere.stl  sphere_2.stl  sphere_half.stl
